Added EntryPoint Commands
Avoids run of the h2o.jar initiation command after starting the docker container.

--- a/Dockerfile_Custom
+++ b/Dockerfile_Custom
@@ -55,6 +55,9 @@ EXPOSE 54322
 
 #ENTRYPOINT ["java", "-Xmx4g", "-jar", "/opt/h2o.jar"]
 # Define default command
+cd opt/
+java -Xmx1g -jar h2o.jar
+
 
 CMD \
   ["/bin/bash"]
